apps/nginx/base/overlay_artifacts/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/issuer: <REPLACE_WITH_PREFIX>cert-issuer
spec:
  rules:
    - host: <REPLACE_WITH_DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: nginx
                port: 
                  # example using port name
                  name: nginx
  tls:
    - hosts:
        - <REPLACE_WITH_DOMAIN>
        - www.<REPLACE_WITH_DOMAIN>
      secretName: <REPLACE_WITH_PREFIX>nginx-ssl
